--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,87 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>NGParts</title>
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <!-- Material Design Bootstrap -->
-    <link href="css/mdb.min.css" rel="stylesheet">
-    <!-- Your custom styles (optional) -->
-    <link href="css/styleNGPLanding.css" rel="stylesheet">
-    <!-- Place BrandFlow script here -->
-    <script>
-      (function () {
-
-          var scripts = ["/static/general/bf-core.js", "/static/containers/yourUniqueID.js"];
-          for (var i = 0; i < scripts.length; i++) {
-              var script = document.createElement("script");
-              script.src = "//test.brandflow.net" + scripts[i] + "?ts=" + Date.now() + "#";
-              script.async = false;
-              document.head.appendChild(script);
-          }
-      })();
-  </script>
-  <!-- Place BrandFlow script here -->
-</head>
-
-<body>
-    <!--Main Navigation-->
-    <header>
-        <!--Navbar-->
-        <nav class="navbar navbar-expand-lg navbar-dark black fixed-top">
-            <div class="container">
-                <!-- Navbar brand -->
-                <a class="navbar-brand" href="#">Nogalitos</a>
-                <!-- Collapse button -->
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav" aria-controls="basicExampleNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <!-- Collapsible content -->
-                <div class="collapse navbar-collapse" id="basicExampleNav">
-                    <!-- Links -->
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#">Home
-                                <span class="sr-only">(current)</span>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Suppliers</a>
-                        </li>
-                        <!-- Dropdown -->
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Parts</a>
-                            <div class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdownMenuLink">
-                                <a class="dropdown-item" href="#">Automatic Transmission</a>
-                                <a class="dropdown-item" href="#">Standard Transmission</a>
-                                <a class="dropdown-item" href="#">Differential</a>
-                                <a class="dropdown-item" href="#">Tool Cases</a>
-                                <a class="dropdown-item" href="#">Performance</a>
-                                <a class="dropdown-item" href="#">Tools & Equipment</a>
-                                
-                            </div>
-                        </li>
-                    </ul>
-                    <!-- Links -->
-                    <form class="form-inline">
-                        <div class="md-form mt-0">
-                            <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-                        </div>
-                    </form>
-                </div>
-                <!-- Collapsible content -->
-            </div>
-        </nav>
-        <!--/.Navbar-->
+    <%= stylesheet_link_tag("styleNGPLanding") %>
         <!--Mask-->
         <div id="intro" class="view">
             <div class="mask rgba-black-strong">
@@ -157,7 +74,7 @@
                     <!--Grid column-->
                     <div class="col-lg-4 col-md-6 mb-4">
                         <div class="view overlay z-depth-1-half">
-                            <img src="css/automaticTrans.jpg" class="img-fluid" alt="">
+                            <img src="automaticTrans.jpg" class="img-fluid" alt="">
                             <div class="mask rgba-white-slight"></div>
                         </div>
                         <h4 class="my-4 font-weight-bold">Automatic Transmission</h4>
@@ -167,7 +84,7 @@
                     <!--Grid column-->
                     <div class="col-lg-4 col-md-6 mb-4">
                         <div class="view overlay z-depth-1-half">
-                            <img src="css/standardTrans.jpg" class="img-fluid" alt="">
+                            <img src="standardTrans.jpg" class="img-fluid" alt="">
                             <div class="mask rgba-white-slight"></div>
                         </div>
                         <h4 class="my-4 font-weight-bold">Standard Transmission</h4>
@@ -177,7 +94,7 @@
                     <!--Grid column-->
                     <div class="col-lg-4 col-md-6 mb-4">
                         <div class="view overlay z-depth-1-half">
-                            <img src="css/differentialBox.jpg" class="img-fluid" alt="">
+                            <img src="differentialBox.jpg" class="img-fluid" alt="">
                             <div class="mask rgba-white-slight"></div>
                         </div>
                         <h4 class="my-4 font-weight-bold">Differential</h4>
@@ -189,7 +106,7 @@
                 <!--Grid row-->
                 <div class="row">
                     <!--Grid column-->
-                    <div class="col-lg-4 col-md-12 mb-4">
+                    <div class="col-lg-4 col-md-6 mb-4">
                         <div class="view overlay z-depth-1-half">
                             <img src="https://mdbootstrap.com/img/Photos/Others/images/10.jpg" class="img-fluid" alt="">
                             <div class="mask rgba-white-slight"></div>
@@ -298,167 +215,5 @@
                 <!--Grid row-->
             </section>
             <!--Section: Gallery-->
-            <hr class="my-5">
-            <!--Section: Contact-->
-            <section id="contact">
-                <!-- Heading -->
-                <h2 class="mb-5 font-weight-bold text-center">Contact us</h2>
-                <!--Grid row-->
-                <div class="row">
-                    <!--Grid column-->
-                    <div class="col-lg-5 col-md-12">
-                        <!-- Form contact -->
-                        <form class="p-5">
-                            <div class="md-form form-sm"> <i class="fa fa-user prefix grey-text"></i>
-                                <input type="text" id="form3" class="form-control form-control-sm">
-                                <label for="form3">Your name</label>
-                            </div>
-                            <div class="md-form form-sm"> <i class="fa fa-envelope prefix grey-text"></i>
-                                <input type="text" id="form2" class="form-control form-control-sm">
-                                <label for="form2">Your email</label>
-                            </div>
-                            <div class="md-form form-sm"> <i class="fa fa-tag prefix grey-text"></i>
-                                <input type="text" id="form32" class="form-control form-control-sm">
-                                <label for="form34">Subject</label>
-                            </div>
-                            <div class="md-form form-sm"> <i class="fa fa-pencil prefix grey-text"></i>
-                                <textarea type="text" id="form8" class="md-textarea form-control form-control-sm" rows="4"></textarea>
-                                <label for="form8">Your message</label>
-                            </div>
-                            <div class="text-center mt-4">
-                                <button class="btn btn-primary">Send <i class="fa fa-paper-plane-o ml-1"></i></button>
-                            </div>
-                        </form>
-                        <!-- Form contact -->
-                    </div>
-                    <!--Grid column-->
-                    <!--Grid column-->
-                    <div class="col-lg-7 col-md-12">
-                        <!--Grid row-->
-                        <div class="row text-center">
-                            <!--Grid column-->
-                            <div class="col-lg-4 col-md-12 mb-3">
-                                <p>
-                                    <i class="fa fa-map fa-1x mr-2 grey-text"></i> 433 New Laredo Hwy.
-San Antonio, TX 78211 </p>
-                            </div>
-                            <!--Grid column-->
-                            <!--Grid column-->
-                            <div class="col-lg-4 col-md-6 mb-3">
-                                <p>
-                                    <i class="fa fa-building fa-1x mr-2 grey-text"></i>
-M-F:
-    8:00 am - 5:30 pm 
-Sat:
-    9:00 am - 1:00 pm <br>
-Sun:
-    Closed
-</p>
-                            </div>
-                            <!--Grid column-->
-                            <!--Grid column-->
-                            <div class="col-lg-4 col-md-6 mb-3">
-                                <p>
-                                    <i class="fa fa-phone fa-1x mr-2 grey-text"></i>Tel: 210-923-4571 <br>
-Toll-Free: 1-800-929-5103</p>
-                            </div>
-                            <!--Grid column-->
-                        </div>
-                        <!--Grid row-->
-                        <!--Google map-->
-                        <div id="map-container" class="z-depth-1-half map-container mb-5" style="height: 400px"></div>
-                    </div>
-                    <!--Grid column-->
-                </div>
-                <!--Grid row-->
-            </section>
-            <!--Section: Contact-->
-        </div>
-    </main>
-    <!--Main layout-->
-    <!--Footer-->
-    <footer class="page-footer text-center text-md-left font-small indigo pt-4 mt-4">
-        <!--Footer Links-->
-        <div class="container text-center text-md-left">
-            <div class="row">
-                <!--First column-->
-                <div class="col-md-6 pb-3">
-                    <h5 class="text-uppercase">Footer Content</h5>
-                    <p>Here you can use rows and columns here to organize your footer content.</p>
-                </div>
-                <!--/.First column-->
-                <!--Second column-->
-                <div class="col-md-6 pb-3">
-                    <h5 class="text-uppercase">Links</h5>
-                    <ul class="list-unstyled">
-                        <li>
-                            <a href="#!">Link 1</a>
-                        </li>
-                        <li>
-                            <a href="#!">Link 2</a>
-                        </li>
-                        <li>
-                            <a href="#!">Link 3</a>
-                        </li>
-                        <li>
-                            <a href="#!">Link 4</a>
-                        </li>
-                    </ul>
-                </div>
-                <!--/.Second column-->
-            </div>
-        </div>
-        <!--Footer Links-->
-        
-            <!--Copyright-->
-            <div class="footer-copyright py-3 text-center">
-                © 2018 Copyright:
-                <a href="https://mdbootstrap.com/bootstrap-tutorial/"> Websync </a>
-            </div>
-            <!--/.Copyright-->
-    </footer>
-    <!--Footer-->
-    <!-- SCRIPTS -->
-    <!-- JQuery -->
-    <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
-    <!-- Bootstrap tooltips -->
-    <script type="text/javascript" src="js/popper.min.js"></script>
-    <!-- Bootstrap core JavaScript -->
-    <script type="text/javascript" src="js/bootstrap.min.js"></script>
-    <!-- MDB core JavaScript -->
-    <script type="text/javascript" src="js/mdb.min.js"></script>
-    <!--Google Maps-->
-    <script src="https://maps.google.com/maps/api/js"></script>
-    <!-- Google Maps settings -->
-    <script>
-    // Regular map
-    function regular_map() {
-        var var_location = new google.maps.LatLng(29.369537,-98.544078);
+            
 
-        var var_mapoptions = {
-            center: var_location,
-            zoom: 16
-        };
-
-        var var_map = new google.maps.Map(document.getElementById("map-container"),
-            var_mapoptions);
-
-        var var_marker = new google.maps.Marker({
-            position: var_location,
-            map: var_map,
-            title: "New York"
-        });
-    }
-
-    // Initialize maps
-    google.maps.event.addDomListener(window, 'load', regular_map);
-    </script>
-    <!-- Carousel options -->
-    <script>
-    $('.carousel').carousel({
-        interval: 3000,
-    })
-    </script>
-</body>
-
-</html>
