Added content to parts pages and modified routes to set home page as root

--- a/app/views/parts/automaticTrans.html.erb
+++ b/app/views/parts/automaticTrans.html.erb
@@ -60,17 +60,18 @@
                     <!--Excerpt-->
                     <a href="" class="teal-text">
                         <h6 class="pb-1">
-                                <i class="fa fa-heart"></i>
-                                <strong> Lifestyle </strong>
+                                <i class="fa fa-gear"></i>
+                                <strong> #1 Since 1946 </strong>
                             </h6>
                     </a>
                     <h4 class="mb-3">
                             <strong>We Carry A Complete Line of Automatic Transmission Parts
-
                         </strong>
                         </h4>
-                    <p>
-                        Filters
+                    <p> You don’t have to worry about shopping around, just come straight to Nogalitos Gear Company. We provide you with quality transmission parts and won’t take advantage of you by hiking up the price. Get all our parts at competitive prices! Call us at 210-923-4571 now for more information!
+                        <br>
+                        <br>Our selction includes:
+                        <br> Filters
                         <br> Coolers
                         <br> Mounts
                         <br> Shift kits
