--- a/app/views/parts/differential.html.erb
+++ b/app/views/parts/differential.html.erb
@@ -8,7 +8,7 @@
         <!--Section: Gallery-->
         <section id="gallery">
             <!-- Heading -->
-            <h2 class="mb-5 font-weight-bold text-center">Automatic Transmission Parts</h2>
+            <h2 class="mb-5 font-weight-bold text-center">Differential Parts</h2>
             <!--Grid row-->
             <div class="row">
                 <!--Grid column-->
@@ -60,27 +60,27 @@
                     <!--Excerpt-->
                     <a href="" class="teal-text">
                         <h6 class="pb-1">
-                                <i class="fa fa-heart"></i>
-                                <strong> Lifestyle </strong>
+                                <i class="fa fa-gear"></i>
+                                <strong> #1 Since 1946 </strong>
                             </h6>
                     </a>
                     <h4 class="mb-3">
-                            <strong>We Carry A Complete Line of Automatic Transmission Parts
+                            <strong>That Howling You Hear Is Not the Wind
 
                         </strong>
                         </h4>
                     <p>
-                        Filters
-                        <br> Coolers
-                        <br> Mounts
-                        <br> Shift kits
-                        <br> Flywheels
-                        <br> Bushings
-                        <br> Hard parts
-                        <br> Heavy-duty bands
-                        <br> Torque converters
-                        <br> Overhaul Kits
-                        <br> And much more!</p>
+                        This is a sign that your vehicle's differential gears may be worn out. Here at Nogalitos Gear Company, we provide the ring and pinion sets and any other parts you may need to repair your differential. Visit us at 433 New Laredo Hwy today!
+                    <br>
+                    <br>Our selction includes:
+                    <br>Axles
+                    <br>Spools
+                    <br>Ring setss
+                    <br>Pinion sets
+                    <br>Posi units
+                    <br>Bearings and seals
+                    <br>Gear ratio’s from 2.73 to 7.00
+                        </p>
                     <a class="btn btn-primary btn-md">Contact Us</a>
                 </div>
                 <!--Grid column-->
