--- a/app/views/parts/performance.html.erb
+++ b/app/views/parts/performance.html.erb
@@ -8,7 +8,7 @@
         <!--Section: Gallery-->
         <section id="gallery">
             <!-- Heading -->
-            <h2 class="mb-5 font-weight-bold text-center">Automatic Transmission Parts</h2>
+            <h2 class="mb-5 font-weight-bold text-center">Performance Parts</h2>
             <!--Grid row-->
             <div class="row">
                 <!--Grid column-->
@@ -60,26 +60,23 @@
                     <!--Excerpt-->
                     <a href="" class="teal-text">
                         <h6 class="pb-1">
-                                <i class="fa fa-heart"></i>
-                                <strong> Lifestyle </strong>
+                                <i class="fa fa-gear"></i>
+                                <strong> #1 Since 1946 </strong>
                             </h6>
                     </a>
                     <h4 class="mb-3">
-                            <strong>We Carry A Complete Line of Automatic Transmission Parts
-
+                            <strong>Get Your Transmission Race Ready
                         </strong>
                         </h4>
-                    <p>
-                        Filters
-                        <br> Coolers
-                        <br> Mounts
-                        <br> Shift kits
-                        <br> Flywheels
-                        <br> Bushings
-                        <br> Hard parts
-                        <br> Heavy-duty bands
-                        <br> Torque converters
-                        <br> Overhaul Kits
+                    <p> Looking for lower ET's or building a muscle car? At Nogalitos Gear Company, we have the transmission parts you need for maximum performance. Street or strip, we have what you need to get that tire “chirping” shift every time. Visit us at 433 New Laredo Hwy today!
+                        <br>
+                        <br>Our selction includes:
+                        <br>Racing transmission pumps
+                        <br>Stall speed converters
+                        <br>Billet shafts
+                        <br>Tranz-brake
+                        <br>Performance Planetary sets
+                        <br>Red Eagle Racing clutches
                         <br> And much more!</p>
                     <a class="btn btn-primary btn-md">Contact Us</a>
                 </div>
