--- a/app/views/parts/toolsAndEquipment.html.erb
+++ b/app/views/parts/toolsAndEquipment.html.erb
@@ -60,27 +60,27 @@
                     <!--Excerpt-->
                     <a href="" class="teal-text">
                         <h6 class="pb-1">
-                                <i class="fa fa-heart"></i>
-                                <strong> Lifestyle </strong>
+                                <i class="fa fa-gear"></i>
+                                <strong> #1 Since 1946 </strong>
                             </h6>
                     </a>
                     <h4 class="mb-3">
-                            <strong>We Carry A Complete Line of Automatic Transmission Parts
-
+                            <strong>Exceptional Auto Tools and Equipment
                         </strong>
                         </h4>
-                    <p>
-                        Filters
-                        <br> Coolers
-                        <br> Mounts
-                        <br> Shift kits
-                        <br> Flywheels
-                        <br> Bushings
-                        <br> Hard parts
-                        <br> Heavy-duty bands
-                        <br> Torque converters
-                        <br> Overhaul Kits
-                        <br> And much more!</p>
+                    <p> Rely on Nogalitos Gear Company for superior-quality tools and equipment from trusted companies such as Adapt-A-Case, Northland Tools, and more. Visit us today to choose from our full line of specialty tools that will help you build your automatic transmission, transfer case, standard transmission, and differential.
+                        <br>
+                        <br>Our selction includes:
+                        <br>Adapt-A-Case
+                        <br>All Trans
+                        <br>Assenmacher Specialty Tools
+                        <br>Northland Tools
+                        <br>Precision of New Hampton
+                        <br>Randy's Ring & Pinion
+                        <br>Trans Tool
+                        <br>Speciality Tools
+                        <br>Zamorano Specialty Tools
+                         <br> And much more!</p>
                     <a class="btn btn-primary btn-md">Contact Us</a>
                 </div>
                 <!--Grid column-->
