--- a/app/views/parts/transferCase.html.erb
+++ b/app/views/parts/transferCase.html.erb
@@ -8,7 +8,7 @@
         <!--Section: Gallery-->
         <section id="gallery">
             <!-- Heading -->
-            <h2 class="mb-5 font-weight-bold text-center">Automatic Transmission Parts</h2>
+            <h2 class="mb-5 font-weight-bold text-center">Transfer Case Parts</h2>
             <!--Grid row-->
             <div class="row">
                 <!--Grid column-->
@@ -60,27 +60,22 @@
                     <!--Excerpt-->
                     <a href="" class="teal-text">
                         <h6 class="pb-1">
-                                <i class="fa fa-heart"></i>
-                                <strong> Lifestyle </strong>
+                                <i class="fa fa-gear"></i>
+                                <strong> #1 Since 1946 </strong>
                             </h6>
                     </a>
                     <h4 class="mb-3">
-                            <strong>We Carry A Complete Line of Automatic Transmission Parts
-
+                            <strong>Top-Quality Reman Transfer Cases and Parts
                         </strong>
                         </h4>
-                    <p>
-                        Filters
-                        <br> Coolers
-                        <br> Mounts
-                        <br> Shift kits
-                        <br> Flywheels
-                        <br> Bushings
-                        <br> Hard parts
-                        <br> Heavy-duty bands
-                        <br> Torque converters
-                        <br> Overhaul Kits
-                        <br> And much more!</p>
+                    <p> Get your truck's transfer case repaired by our experienced professionals at Nogalitos Gear Company.
+                    <br>
+                    <br>Our selction includes:
+                    <br>Transfer Case Chains
+                    <br>Gasket Sets
+                    <br>Seal Kits
+                    <br>Transfer Case Hard Parts 
+                    </p>
                     <a class="btn btn-primary btn-md">Contact Us</a>
                 </div>
                 <!--Grid column-->
