--- a/app/views/parts/standardTrans.html.erb
+++ b/app/views/parts/standardTrans.html.erb
@@ -8,7 +8,7 @@
         <!--Section: Gallery-->
         <section id="gallery">
             <!-- Heading -->
-            <h2 class="mb-5 font-weight-bold text-center">Automatic Transmission Parts</h2>
+            <h2 class="mb-5 font-weight-bold text-center">Standard Transmission Parts</h2>
             <!--Grid row-->
             <div class="row">
                 <!--Grid column-->
@@ -60,27 +60,26 @@
                     <!--Excerpt-->
                     <a href="" class="teal-text">
                         <h6 class="pb-1">
-                                <i class="fa fa-heart"></i>
-                                <strong> Lifestyle </strong>
+                                <i class="fa fa-gear"></i>
+                                <strong> #1 Since 1946 </strong>
                             </h6>
                     </a>
                     <h4 class="mb-3">
-                            <strong>We Carry A Complete Line of Automatic Transmission Parts
+                            <strong>Get the Complete Rebuilt Transmission or Just the Parts
 
                         </strong>
                         </h4>
-                    <p>
-                        Filters
-                        <br> Coolers
-                        <br> Mounts
-                        <br> Shift kits
-                        <br> Flywheels
-                        <br> Bushings
-                        <br> Hard parts
-                        <br> Heavy-duty bands
-                        <br> Torque converters
-                        <br> Overhaul Kits
-                        <br> And much more!</p>
+                    <p> If you need just a few parts and not an entire transmission, Nogalitos Gear Company has what you need in stock. When you need us to repair your standard transmission for you, there is no reason to go broke paying for it. Expert service and repairs at affordable prices - our GUARANTEE.
+					<br>
+					<br>Our selction includes:
+                    <br>Standard clutch kits
+				    <br>Shift Forks 
+				    <br>Syncro Rings
+				    <br>Gasket sets
+				    <br>Seals
+				    <br>Bearings
+				    <br>And more!
+                    </p>
                     <a class="btn btn-primary btn-md">Contact Us</a>
                 </div>
                 <!--Grid column-->
