Adjusted tools and equipment page and changed Navbar to sticky-top

--- a/app/views/parts/toolsAndEquipment.html.erb
+++ b/app/views/parts/toolsAndEquipment.html.erb
@@ -8,7 +8,7 @@
         <!--Section: Gallery-->
         <section id="gallery">
             <!-- Heading -->
-            <h2 class="mb-5 font-weight-bold text-center">Automatic Transmission Parts</h2>
+            <h2 class="mb-5 font-weight-bold text-center">Tools And Equipments</h2>
             <!--Grid row-->
             <div class="row">
                 <!--Grid column-->
