Attempt to add room for home page intro and made navbar scrolling top

--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,6 +1,6 @@
     <%= stylesheet_link_tag("styleNGPLanding") %>
         <!--Mask-->
-        <div id="intro" class="view">
+        <div id="intro" class="view mt-5">
             <div class="mask rgba-black-strong">
                 <div class="container-fluid d-flex align-items-center justify-content-center h-100">
                     <div class="row d-flex justify-content-center text-center">
