--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
     <!--Main Navigation-->
     <header>
         <!--Navbar-->
-        <nav class="navbar navbar-expand-lg navbar-dark black sticky-top">
+        <nav class="navbar navbar-expand-lg navbar-dark black sticky-top scrolling-navbar">
             <div class="container">
                 <!-- Navbar brand -->
                 <a class="navbar-brand" href="#">Nogalitos</a>
