Add intro photo from Amazon S3

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>NGParts</title>
+    <title>Nogalitos Gear</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -18,10 +18,10 @@
     <!--Main Navigation-->
     <header>
         <!--Navbar-->
-        <nav class="navbar navbar-expand-lg navbar-dark black sticky-top scrolling-navbar">
+        <nav class="navbar navbar-expand-lg navbar-dark black fixed-top">
             <div class="container">
                 <!-- Navbar brand -->
-                <a class="navbar-brand" href="#">Nogalitos</a>
+                <a class="navbar-brand" href="#">Nogalitos Gear Company</a>
                 <!-- Collapse button -->
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav" aria-controls="basicExampleNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
