--- a/app/views/parts/automaticTrans.html.erb
+++ b/app/views/parts/automaticTrans.html.erb
@@ -26,12 +26,12 @@
                         <div class="carousel-inner z-depth-1-half" role="listbox">
                             <!--First slide-->
                             <div class="carousel-item active">
-                                <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Others/images/84.jpg" alt="First slide">
+                                <img class="d-block w-100" src="https://s3.amazonaws.com/pics-ngparts-bucket/Allison_1000.png" alt="First slide">
                             </div>
                             <!--/First slide-->
                             <!--Second slide-->
                             <div class="carousel-item">
-                                <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Others/images/85.jpg" alt="Second slide">
+                                <img class="d-block w-100" src="https://s3.amazonaws.com/pics-ngparts-bucket/autoclutches.jpg" alt="Second slide">
                             </div>
                             <!--/Second slide-->
                             <!--Third slide-->
