--- a/app/views/parts/performance.html.erb
+++ b/app/views/parts/performance.html.erb
@@ -26,17 +26,15 @@
                         <div class="carousel-inner z-depth-1-half" role="listbox">
                             <!--First slide-->
                             <div class="carousel-item active">
-                                <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Others/images/84.jpg" alt="First slide">
+                                <img class="d-block w-100" src="https://s3.amazonaws.com/pics-ngparts-bucket/charger_racing.JPG" alt="First slide">
                             </div>
-                            <!--/First slide-->
                             <!--Second slide-->
                             <div class="carousel-item">
-                                <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Others/images/85.jpg" alt="Second slide">
+                                <img class="d-block w-100" src="https://s3.amazonaws.com/pics-ngparts-bucket/comaro.JPG" alt="Second slide">
                             </div>
-                            <!--/Second slide-->
                             <!--Third slide-->
                             <div class="carousel-item">
-                                <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Others/images/86.jpg" alt="Third slide">
+                                <img class="d-block w-100" src="https://s3.amazonaws.com/pics-ngparts-bucket/jacob_avery_trucks.jpg" alt="Third slide">
                             </div>
                             <!--/Third slide-->
                         </div>
