--- a/app/views/parts/performance.html.erb
+++ b/app/views/parts/performance.html.erb
@@ -34,7 +34,7 @@
                             </div>
                             <!--Third slide-->
                             <div class="carousel-item">
-                                <img class="d-block w-100" src="https://s3.amazonaws.com/pics-ngparts-bucket/jacob_avery_trucks.jpg" alt="Third slide">
+                                <img class="d-block w-100" src="https://s3.amazonaws.com/pics-ngparts-bucket/dragster.JPG" alt="Third slide">
                             </div>
                             <!--/Third slide-->
                         </div>
