--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -74,31 +74,31 @@
                     <!--Grid column-->
                     <div class="col-lg-4 col-md-6 mb-4">
                         <div class="view overlay z-depth-1-half">
-                            <img src="automaticTrans.jpg" class="img-fluid" alt="">
+                            <img src="https://s3.amazonaws.com/pics-ngparts-bucket/automatictranswelcome.jpg" class="img-fluid" alt="">
                             <div class="mask rgba-white-slight"></div>
                         </div>
                         <h4 class="my-4 font-weight-bold">Automatic Transmission</h4>
-                        <p class="black-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit maiores nam, aperiam minima assumenda deleniti hic.</p>
+                        <p class="black-text">Torque converters, flywheels, kits, hard parts, and more.</p>
                     </div>
                     <!--Grid column-->
                     <!--Grid column-->
                     <div class="col-lg-4 col-md-6 mb-4">
                         <div class="view overlay z-depth-1-half">
-                            <img src="standardTrans.jpg" class="img-fluid" alt="">
+                            <img src="https://s3.amazonaws.com/pics-ngparts-bucket/transparent_standardtrans.png" class="img-fluid" alt="">
                             <div class="mask rgba-white-slight"></div>
                         </div>
                         <h4 class="my-4 font-weight-bold">Standard Transmission</h4>
-                        <p class="black-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit maiores nam, aperiam minima assumenda deleniti hic.</p>
+                        <p class="black-text">Standard clutch kits, gears, services and repairs.</p>
                     </div>
                     <!--Grid column-->
                     <!--Grid column-->
                     <div class="col-lg-4 col-md-6 mb-4">
                         <div class="view overlay z-depth-1-half">
-                            <img src="differentialBox.jpg" class="img-fluid" alt="">
+                            <img src="https://s3.amazonaws.com/pics-ngparts-bucket/diff_transparent.jpg" class="img-fluid" alt="">
                             <div class="mask rgba-white-slight"></div>
                         </div>
                         <h4 class="my-4 font-weight-bold">Differential</h4>
-                        <p class="black-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit maiores nam, aperiam minima assumenda deleniti hic.</p>
+                        <p class="black-text">Ring and pinion sets, and bearing kits.</p>
                     </div>
                     <!--Grid column-->
                 </div>
@@ -108,31 +108,31 @@
                     <!--Grid column-->
                     <div class="col-lg-4 col-md-6 mb-4">
                         <div class="view overlay z-depth-1-half">
-                            <img src="https://mdbootstrap.com/img/Photos/Others/images/10.jpg" class="img-fluid" alt="">
+                            <img src="https://s3.amazonaws.com/pics-ngparts-bucket/tranfercase.jpg>
                             <div class="mask rgba-white-slight"></div>
                         </div>
                         <h4 class="my-4 font-weight-bold">Transfer Case</h4>
-                        <p class="black-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit maiores nam, aperiam minima assumenda deleniti hic.</p>
+                        <p class="black-text">Transfer case parts, services and repairs .</p>
                     </div>
                     <!--Grid column-->
                     <!--Grid column-->
                     <div class="col-lg-4 col-md-6 mb-4">
                         <div class="view overlay z-depth-1-half">
-                            <img src="https://mdbootstrap.com/img/Photos/Others/images/11.jpg" class="img-fluid" alt="">
+                            <img src="https://s3.amazonaws.com/pics-ngparts-bucket/dragster.JPG>
                             <div class="mask rgba-white-slight"></div>
                         </div>
                         <h4 class="my-4 font-weight-bold">Performance</h4>
-                        <p class="black-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit maiores nam, aperiam minima assumenda deleniti hic.</p>
+                        <p class="black-text">Transmission brakes, Billet shafts, Stall speed converters and more.</p>
                     </div>
                     <!--Grid column-->
                     <!--Grid column-->
                     <div class="col-lg-4 col-md-6 mb-4">
                         <div class="view overlay z-depth-1-half">
-                            <img src="https://mdbootstrap.com/img/Photos/Others/images/13.jpg" class="img-fluid" alt="">
+                            <img src="https://s3.amazonaws.com/pics-ngparts-bucket/hotflushwasher.jpg>
                             <div class="mask rgba-white-slight"></div>
                         </div>
                         <h4 class="my-4 font-weight-bold">Tools & Equipment</h4>
-                        <p class="black-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit maiores nam, aperiam minima assumenda deleniti hic.</p>
+                        <p class="black-text">We carry many brands such as Adapt-A-Case, All Trans, Speciality Tools and more.</p>
                     </div>
                     <!--Grid column-->
                 </div>
