added more picutures and text to carrosel on welcome page

--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -108,7 +108,7 @@
                     <!--Grid column-->
                     <div class="col-lg-4 col-md-6 mb-4">
                         <div class="view overlay z-depth-1-half">
-                            <img src="https://s3.amazonaws.com/pics-ngparts-bucket/tranfercase.jpg>
+                            <img src="https://s3.amazonaws.com/pics-ngparts-bucket/tranfercase.jpg" class="img-fluid" alt="">
                             <div class="mask rgba-white-slight"></div>
                         </div>
                         <h4 class="my-4 font-weight-bold">Transfer Case</h4>
@@ -118,7 +118,7 @@
                     <!--Grid column-->
                     <div class="col-lg-4 col-md-6 mb-4">
                         <div class="view overlay z-depth-1-half">
-                            <img src="https://s3.amazonaws.com/pics-ngparts-bucket/dragster.JPG>
+                            <img src="https://s3.amazonaws.com/pics-ngparts-bucket/dragster.JPG" class="img-fluid" alt="">
                             <div class="mask rgba-white-slight"></div>
                         </div>
                         <h4 class="my-4 font-weight-bold">Performance</h4>
@@ -128,7 +128,7 @@
                     <!--Grid column-->
                     <div class="col-lg-4 col-md-6 mb-4">
                         <div class="view overlay z-depth-1-half">
-                            <img src="https://s3.amazonaws.com/pics-ngparts-bucket/hotflushwasher.jpg>
+                            <img src="https://s3.amazonaws.com/pics-ngparts-bucket/hotflushwasher.jpg" class="img-fluid" alt="">
                             <div class="mask rgba-white-slight"></div>
                         </div>
                         <h4 class="my-4 font-weight-bold">Tools & Equipment</h4>
@@ -161,17 +161,15 @@
                             <div class="carousel-inner z-depth-1-half" role="listbox">
                                 <!--First slide-->
                                 <div class="carousel-item active">
-                                    <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Others/images/84.jpg" alt="First slide">
+                                    <img class="d-block w-100" src="https://s3.amazonaws.com/pics-ngparts-bucket/Yukon-Logo.jpg" alt="First slide">
                                 </div>
-                                <!--/First slide-->
                                 <!--Second slide-->
                                 <div class="carousel-item">
-                                    <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Others/images/85.jpg" alt="Second slide">
+                                    <img class="d-block w-100" src="https://s3.amazonaws.com/pics-ngparts-bucket/precision_new_hampton_logo.png" alt="Second slide">
                                 </div>
-                                <!--/Second slide-->
                                 <!--Third slide-->
                                 <div class="carousel-item">
-                                    <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Others/images/86.jpg" alt="Third slide">
+                                    <img class="d-block w-100" src="https://s3.amazonaws.com/pics-ngparts-bucket/RaybestosFrictionClutchPlates.jpg" alt="Third slide">
                                 </div>
                                 <!--/Third slide-->
                             </div>
@@ -200,14 +198,11 @@
                             </h6>
                         </a>
                         <h4 class="mb-3">
-                            <strong>This is title of the news</strong>
+                            <strong>Our Suppliers</strong>
                         </h4>
-                        <p>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus et aut officiis debitis aut rerum.</p>
-                        <p>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus et aut officiis debitis aut rerum.</p>
-                        <p>by
-                            <a>
-                                <strong>Jessica Clark</strong>
-                            </a>, 26/08/2016</p>
+                        <p>Yukon is the number one leader in differential parts!</p>
+                        <p>Precision of New Hampton is in our oppinon the best tourqe converters you can get!.</p>
+                        <p>Raybestos by far have the best powertrain products in the industry!</p>
                         <a class="btn btn-primary btn-md">Read more</a>
                     </div>
                     <!--Grid column-->
