--- a/app/views/info/about.html.erb
+++ b/app/views/info/about.html.erb
@@ -1,2 +1,87 @@
-<h1>Info#about</h1>
-<p>Find me in app/views/info/about.html.erb</p>
+<div class="container">
+        <!--Section: Examples-->
+        <hr class="my-5">
+        <!--Section: Gallery-->
+        <section id="gallery">
+            <!-- Heading -->
+            <h2 class="mb-5 font-weight-bold text-center">Automatic Transmission Parts</h2>
+            <!--Grid row-->
+            <div class="row">
+                <!--Grid column-->
+                <div class="col-md-6 mb-4">
+                    <!--Carousel Wrapper-->
+                    <div id="carousel-example-1z" class="carousel slide carousel-fade" data-ride="carousel">
+                        <!--Indicators-->
+                        <ol class="carousel-indicators">
+                            <li data-target="#carousel-example-1z" data-slide-to="0" class="active"></li>
+                            <li data-target="#carousel-example-1z" data-slide-to="1"></li>
+                            <li data-target="#carousel-example-1z" data-slide-to="2"></li>
+                        </ol>
+                        <!--/.Indicators-->
+                        <!--Slides-->
+                        <div class="carousel-inner z-depth-1-half" role="listbox">
+                            <!--First slide-->
+                            <div class="carousel-item active">
+                                <img class="d-block w-100" src="https://s3.amazonaws.com/pics-ngparts-bucket/Allison_1000.png" alt="First slide">
+                            </div>
+                            <!--/First slide-->
+                            <!--Second slide-->
+                            <div class="carousel-item">
+                                <img class="d-block w-100" src="https://s3.amazonaws.com/pics-ngparts-bucket/autoclutches.jpg" alt="Second slide">
+                            </div>
+                            <!--/Second slide-->
+                            <!--Third slide-->
+                            <div class="carousel-item">
+                                <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Others/images/86.jpg" alt="Third slide">
+                            </div>
+                            <!--/Third slide-->
+                        </div>
+                        <!--/.Slides-->
+                        <!--Controls-->
+                        <a class="carousel-control-prev" href="#carousel-example-1z" role="button" data-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Previous</span>
+                            </a>
+                        <a class="carousel-control-next" href="#carousel-example-1z" role="button" data-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Next</span>
+                            </a>
+                        <!--/.Controls-->
+                    </div>
+                    <!--/.Carousel Wrapper-->
+                </div>
+                <!--Grid column-->
+                <!--Grid column-->
+                <div class="col-md-6">
+                    <!--Excerpt-->
+                    <a href="" class="teal-text">
+                        <h6 class="pb-1">
+                                <i class="fa fa-gear"></i>
+                                <strong> #1 Since 1946 </strong>
+                            </h6>
+                    </a>
+                    <h4 class="mb-3">
+                            <strong>We Carry A Complete Line of Automatic Transmission Parts
+                        </strong>
+                        </h4>
+                    <p> You don’t have to worry about shopping around, just come straight to Nogalitos Gear Company. We provide you with quality transmission parts and won’t take advantage of you by hiking up the price. Get all our parts at competitive prices! Call us at 210-923-4571 now for more information!
+                        <br>
+                        <br>Our selction includes:
+                        <br> Filters
+                        <br> Coolers
+                        <br> Mounts
+                        <br> Shift kits
+                        <br> Flywheels
+                        <br> Bushings
+                        <br> Hard parts
+                        <br> Heavy-duty bands
+                        <br> Torque converters
+                        <br> Overhaul Kits
+                        <br> And much more!</p>
+                    <a class="btn btn-primary btn-md">Contact Us</a>
+                </div>
+                <!--Grid column-->
+            </div>
+            <!--Grid row-->
+        </section>
+        <!--Section: Gallery-->
