home page adjustments

--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -63,6 +63,7 @@
                 </div>
                 <!--Grid row-->
             </section>
+        </div>
             <!--Section: Best Features-->
             <hr class="my-5">
             <!--Section: Examples-->
@@ -189,6 +190,7 @@
                         </div>
                         <!--/.Carousel Wrapper-->
                     </div>
+                </div>
                     <!--Grid column-->
                     <!--Grid column-->
                     <div class="col-md-6">
@@ -215,5 +217,7 @@
                 <!--Grid row-->
             </section>
             <!--Section: Gallery-->
+        </main>
+
             
 
