--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,10 +35,10 @@
                                 <span class="sr-only">(current)</span>
                         </li>
                         <li class="nav-item">
-                            <%= link_to "About", root_path, class: "nav-link" %>
+                            <%= link_to "About", about_path, class: "nav-link" %>
                         </li>
                         <li class="nav-item">
-                            <%= link_to "Suppliers", root_path, class: "nav-link" %>
+                            <%= link_to "Suppliers", suppliers_path, class: "nav-link" %>
                         </li>
                         <!-- Dropdown -->
                         <li class="nav-item dropdown">
