--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,12 @@
         <nav class="navbar navbar-expand-lg navbar-dark black fixed-top">
             <div class="container">
                 <!-- Navbar brand -->
-                <a class="navbar-brand" href="#">Nogalitos Gear Company</a>
+                <a class="navbar-brand" href="#">
+                    <img src="https://s3.amazonaws.com/pics-ngparts-bucket/Nog-Logo.jpg" height="80" class="d-inline-block align-top" alt="">
+                    
+                </a>
+                <span class="navbar-brand">Nogalitos Gear Company</span>
+                
                 <!-- Collapse button -->
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav" aria-controls="basicExampleNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
