Add facebook, phone, and email button

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
             <div class="container">
                 <!-- Navbar brand -->
                 <a class="navbar-brand" href="#">
-                    <img src="https://s3.amazonaws.com/pics-ngparts-bucket/Nog-Logo.jpg" height="80" class="d-inline-block align-top" alt="">
+                    <img src="https://s3.amazonaws.com/pics-ngparts-bucket/Nog-Logo.jpg" height="65" class="d-inline-block align-top" alt="">
                     
                 </a>
                 <span class="navbar-brand">Nogalitos Gear Company</span>
@@ -59,11 +59,17 @@
                         </li>
                     </ul>
                     <!-- Links -->
-                    <form class="form-inline">
-                        <div class="md-form mt-0">
-                            <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-                        </div>
-                    </form>
+                    <ul class="navbar-nav nav-flex-icons ml-auto">
+            <li class="nav-item">
+                <a class="nav-link" href="https://www.facebook.com/Nogalitos-Gear-125648054154933"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#"><i class="fa fa-phone" aria-hidden="true"></i></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+            </li>
+        </ul>
                 </div>
                 <!-- Collapsible content -->
             </div>
@@ -148,48 +154,7 @@ Toll-Free: 1-800-929-5103</p>
         </div>
     </main>
     <!--Main layout-->
-    <!--Footer-->
-    <footer class="page-footer text-center text-md-left font-small indigo pt-4 mt-4">
-        <!--Footer Links-->
-        <div class="container text-center text-md-left">
-            <div class="row">
-                <!--First column-->
-                <div class="col-md-6 pb-3">
-                    <h5 class="text-uppercase">Footer Content</h5>
-                    <p>Here you can use rows and columns here to organize your footer content.</p>
-                </div>
-                <!--/.First column-->
-                <!--Second column-->
-                <div class="col-md-6 pb-3">
-                    <h5 class="text-uppercase">Links</h5>
-                    <ul class="list-unstyled">
-                        <li>
-                            <a href="#!">Link 1</a>
-                        </li>
-                        <li>
-                            <a href="#!">Link 2</a>
-                        </li>
-                        <li>
-                            <a href="#!">Link 3</a>
-                        </li>
-                        <li>
-                            <a href="#!">Link 4</a>
-                        </li>
-                    </ul>
-                </div>
-                <!--/.Second column-->
-            </div>
-        </div>
-        <!--Footer Links-->
-        
-            <!--Copyright-->
-            <div class="footer-copyright py-3 text-center">
-                © 2018 Copyright:
-                <a href="https://mdbootstrap.com/bootstrap-tutorial/"> Websync </a>
-            </div>
-            <!--/.Copyright-->
-    </footer>
-    <!--Footer-->
+    
     <!-- SCRIPTS -->
     <!-- JQuery -->
     <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
