--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -95,12 +95,13 @@
                     <!--Grid column-->
                     <div class="col-lg-4 col-md-6 mb-4">
                         <div class="view overlay z-depth-1-half">
-                            <img src="https://s3.amazonaws.com/pics-ngparts-bucket/diff_transparent.jpg" class="img-fluid" alt="">
+                            <img src="https://s3.amazonaws.com/ngpwebsite/ngpimages/dragster.jpg" class="img-fluid" alt="">
                             <div class="mask rgba-white-slight"></div>
                         </div>
-                        <h4 class="my-4 font-weight-bold">Differential</h4>
-                        <p class="black-text">Ring and pinion sets, and bearing kits.</p>
+                        <h4 class="my-4 font-weight-bold">Performance</h4>
+                        <p class="black-text">Transmission brakes, Billet shafts, Stall speed converters and more.</p>
                     </div>
+                    
                     <!--Grid column-->
                 </div>
                 <!--Grid row-->
@@ -109,7 +110,7 @@
                     <!--Grid column-->
                     <div class="col-lg-4 col-md-6 mb-4">
                         <div class="view overlay z-depth-1-half">
-                            <img src="https://s3.amazonaws.com/pics-ngparts-bucket/tranfercase.jpg" class="img-fluid" alt="">
+                            <img src="https://s3.amazonaws.com/ngpwebsite/ngpimages/tranfercase.jpg" class="img-fluid" alt="">
                             <div class="mask rgba-white-slight"></div>
                         </div>
                         <h4 class="my-4 font-weight-bold">Transfer Case</h4>
@@ -119,17 +120,17 @@
                     <!--Grid column-->
                     <div class="col-lg-4 col-md-6 mb-4">
                         <div class="view overlay z-depth-1-half">
-                            <img src="https://s3.amazonaws.com/pics-ngparts-bucket/dragster.JPG" class="img-fluid" alt="">
+                            <img src="https://s3.amazonaws.com/pics-ngparts-bucket/diff_transparent.jpg" class="img-fluid" alt="">
                             <div class="mask rgba-white-slight"></div>
                         </div>
-                        <h4 class="my-4 font-weight-bold">Performance</h4>
-                        <p class="black-text">Transmission brakes, Billet shafts, Stall speed converters and more.</p>
+                        <h4 class="my-4 font-weight-bold">Differential</h4>
+                        <p class="black-text">Ring and pinion sets, and bearing kits.</p>
                     </div>
                     <!--Grid column-->
                     <!--Grid column-->
                     <div class="col-lg-4 col-md-6 mb-4">
                         <div class="view overlay z-depth-1-half">
-                            <img src="https://s3.amazonaws.com/pics-ngparts-bucket/hotflushwasher.jpg" class="img-fluid" alt="">
+                            <img src="https://s3.amazonaws.com/ngpwebsite/ngpimages/hotflushwasher.jpg" class="img-fluid" alt="">
                             <div class="mask rgba-white-slight"></div>
                         </div>
                         <h4 class="my-4 font-weight-bold">Tools & Equipment</h4>
@@ -140,6 +141,7 @@
                 <!--Grid row-->
             </section>
             <!--Section: Examples-->
+            <div class="container">
             <hr class="my-5">
             <!--Section: Gallery-->
             <section id="gallery">
@@ -162,15 +164,15 @@
                             <div class="carousel-inner z-depth-1-half" role="listbox">
                                 <!--First slide-->
                                 <div class="carousel-item active">
-                                    <img class="d-block w-100" src="https://s3.amazonaws.com/pics-ngparts-bucket/Yukon-Logo.jpg" alt="First slide">
+                                    <img class="d-block w-100" src="https://s3.amazonaws.com/ngpwebsite/ngpimages/Yukon-Logo.jpg" alt="First slide">
                                 </div>
                                 <!--Second slide-->
                                 <div class="carousel-item">
-                                    <img class="d-block w-100" src="https://s3.amazonaws.com/pics-ngparts-bucket/precision_new_hampton_logo.png" alt="Second slide">
+                                    <img class="d-block w-100" src="https://s3.amazonaws.com/ngpwebsite/ngpimages/precisionLogo.jpg" alt="Second slide">
                                 </div>
                                 <!--Third slide-->
                                 <div class="carousel-item">
-                                    <img class="d-block w-100" src="https://s3.amazonaws.com/pics-ngparts-bucket/RaybestosFrictionClutchPlates.jpg" alt="Third slide">
+                                    <img class="d-block w-100" src="https://s3.amazonaws.com/ngpwebsite/ngpimages/raybestosLogo.jpg" alt="Third slide">
                                 </div>
                                 <!--/Third slide-->
                             </div>
@@ -188,7 +190,7 @@
                         </div>
                         <!--/.Carousel Wrapper-->
                     </div>
-                </div>
+                
                     <!--Grid column-->
                     <!--Grid column-->
                     <div class="col-md-6">
@@ -210,6 +212,7 @@
                     <!--Grid column-->
                 </div>
                 <!--Grid row-->
+                </div>
             </section>
             <!--Section: Gallery-->
         </main>
