Attempt to add contact model and mailer, integration of gearwizard with view and routes

--- a/app/views/info/about.html.erb
+++ b/app/views/info/about.html.erb
@@ -4,7 +4,7 @@
         <!--Section: Gallery-->
         <section id="gallery">
             <!-- Heading -->
-            <h2 class="mb-5 font-weight-bold text-center">Automatic Transmission Parts</h2>
+            <h2 class="mb-5 font-weight-bold text-center">About Us</h2>
             <!--Grid row-->
             <div class="row">
                 <!--Grid column-->
@@ -61,23 +61,10 @@
                             </h6>
                     </a>
                     <h4 class="mb-3">
-                            <strong>We Carry A Complete Line of Automatic Transmission Parts
+                            <strong>Our Story
                         </strong>
                         </h4>
-                    <p> You don’t have to worry about shopping around, just come straight to Nogalitos Gear Company. We provide you with quality transmission parts and won’t take advantage of you by hiking up the price. Get all our parts at competitive prices! Call us at 210-923-4571 now for more information!
-                        <br>
-                        <br>Our selction includes:
-                        <br> Filters
-                        <br> Coolers
-                        <br> Mounts
-                        <br> Shift kits
-                        <br> Flywheels
-                        <br> Bushings
-                        <br> Hard parts
-                        <br> Heavy-duty bands
-                        <br> Torque converters
-                        <br> Overhaul Kits
-                        <br> And much more!</p>
+                    <p> We supply parts for automatic transmissions, standard transmissions, transfer cases, and differentials for cars and trucks up to one ton. Foreign and domestic, OEM quality at competitive prices. Also we carry high performance parts in stock at mail order pricing.</p>
                     <a class="btn btn-primary btn-md">Contact Us</a>
                 </div>
                 <!--Grid column-->
