--- a/app/views/info/suppliers.html.erb
+++ b/app/views/info/suppliers.html.erb
@@ -4,7 +4,7 @@
         <!--Section: Gallery-->
         <section id="gallery">
             <!-- Heading -->
-            <h2 class="mb-5 font-weight-bold text-center">Automatic Transmission Parts</h2>
+            <h2 class="mb-5 font-weight-bold text-center">Our Suppliers</h2>
             <!--Grid row-->
             <div class="row">
                 <!--Grid column-->
@@ -61,23 +61,35 @@
                             </h6>
                     </a>
                     <h4 class="mb-3">
-                            <strong>We Carry A Complete Line of Automatic Transmission Parts
+                            <strong>Quality Parts from Quality Suppliers
                         </strong>
                         </h4>
-                    <p> You don’t have to worry about shopping around, just come straight to Nogalitos Gear Company. We provide you with quality transmission parts and won’t take advantage of you by hiking up the price. Get all our parts at competitive prices! Call us at 210-923-4571 now for more information!
-                        <br>
-                        <br>Our selction includes:
-                        <br> Filters
-                        <br> Coolers
-                        <br> Mounts
-                        <br> Shift kits
-                        <br> Flywheels
-                        <br> Bushings
-                        <br> Hard parts
-                        <br> Heavy-duty bands
-                        <br> Torque converters
-                        <br> Overhaul Kits
-                        <br> And much more!</p>
+                    <p> <strong>Our Auto Parts Suppliers:</strong>
+
+                        <br>Allomatic
+                        <br>Alto
+                        <br>American Axle & Manufacturing
+                        <br>Borg Warner
+                        <br>Dynatex
+                        <br>Dura-Bond
+                        <br>Filtran Group
+                        <br>GFX
+                        <br>Hayden
+                        <br>Lisle Tools
+                        <br>Lube Gard
+                        <br>RevMax
+                        <br>Midwest Motive Gear
+                        <br>Mopar
+                        <br>Precision of New Hampton Inc
+                        <br>Raybestos
+                        <br>Rostra
+                        <br>Seymour Paint
+                        <br>Stellar Automotive Group
+                        <br>Superior Products
+                        <br>Fitzall
+                        <br>Transgo
+                        <br>ZF Industries
+                        </p>
                     <a class="btn btn-primary btn-md">Contact Us</a>
                 </div>
                 <!--Grid column-->
