Add mailgun configuration and gem. Also configured contact form delivery

--- a/app/views/contact_mailer/contact_email.html.erb
+++ b/app/views/contact_mailer/contact_email.html.erb
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html>
 <body>
 <h1>Website Contact</h1>
 <p>
@@ -14,3 +16,4 @@ The visitor said:
 "<%= @contact.message %>"
 </p>
 </body>
+</html>
