--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -11,6 +11,8 @@
 <%= form.error_notification %>
 <%= form.input :name, autofocus: true %>
 <%= form.input :email %>
+<%= form.input :phone %>
+<%= form.input :address %>
 <%= form.input :message, as: :text %>
 <%= form.button :submit, 'Submit', class: 'submit' %>
 <% end %>
