--- a/app/views/info/suppliers.html.erb
+++ b/app/views/info/suppliers.html.erb
@@ -19,24 +19,22 @@
                         </ol>
                         <!--/.Indicators-->
                         <!--Slides-->
-                        <div class="carousel-inner z-depth-1-half" role="listbox">
-                            <!--First slide-->
-                            <div class="carousel-item active">
-                                <img class="d-block w-100" src="https://s3.amazonaws.com/pics-ngparts-bucket/Allison_1000.png" alt="First slide">
+                            <div class="carousel-inner z-depth-1-half" role="listbox">
+                                <!--First slide-->
+                                <div class="carousel-item active">
+                                    <img class="d-block w-100" src="https://s3.amazonaws.com/ngpwebsite/ngpimages/Yukon-Logo.jpg" alt="First slide">
+                                </div>
+                                <!--Second slide-->
+                                <div class="carousel-item">
+                                    <img class="d-block w-100" src="https://s3.amazonaws.com/ngpwebsite/ngpimages/precisionLogo.jpg" alt="Second slide">
+                                </div>
+                                <!--Third slide-->
+                                <div class="carousel-item">
+                                    <img class="d-block w-100" src="https://s3.amazonaws.com/ngpwebsite/ngpimages/raybestosLogo.jpg" alt="Third slide">
+                                </div>
+                                <!--/Third slide-->
                             </div>
-                            <!--/First slide-->
-                            <!--Second slide-->
-                            <div class="carousel-item">
-                                <img class="d-block w-100" src="https://s3.amazonaws.com/pics-ngparts-bucket/autoclutches.jpg" alt="Second slide">
-                            </div>
-                            <!--/Second slide-->
-                            <!--Third slide-->
-                            <div class="carousel-item">
-                                <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Others/images/86.jpg" alt="Third slide">
-                            </div>
-                            <!--/Third slide-->
-                        </div>
-                        <!--/.Slides-->
+                            <!--/.Slides-->
                         <!--Controls-->
                         <a class="carousel-control-prev" href="#carousel-example-1z" role="button" data-slide="prev">
                                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -88,6 +86,7 @@
                         <br>Superior Products
                         <br>Fitzall
                         <br>Transgo
+                        <br>Yukon Gear & Axel
                         <br>ZF Industries
                         </p>
                     <a class="btn btn-primary btn-md">Contact Us</a>
