--- a/app/views/gearwyzd/gearwizard.html.erb
+++ b/app/views/gearwyzd/gearwizard.html.erb
@@ -7,7 +7,7 @@
 
 <script type="text/javascript" src="https://www.diffwizard.com/scripts/fbf16cba5daa48ad8c41f78b1fffd41d.js"></script>
 
-<div id="DiffWizard""></div>
+<div id="DiffWizard"></div>
 
 
 </div>
